Update and rename test.md to test.html

--- a/DS_Questions/Questions/vectors_arrays/2d-grid/Find_Search_Count/test.html
+++ b/DS_Questions/Questions/vectors_arrays/2d-grid/Find_Search_Count/test.html
@@ -1,3 +1,7 @@
+
+<!DOCTYPE html>
+<html>
+<body>
 ## Quarterly Results {.tabset .tabset-fade .tabset-pills}
 
 ### By Product
@@ -7,3 +11,6 @@
 ### By Region
 
 (tab content)
+
+</body>
+</html>
