--- a/DS_Questions/Questions/vectors_arrays/2d-grid/Find_Search_Count/test.html
+++ b/DS_Questions/Questions/vectors_arrays/2d-grid/Find_Search_Count/test.html
@@ -1,16 +1,10 @@
-
 <!DOCTYPE html>
 <html>
+<head>
+  <title>My HTML Document</title>
+</head>
 <body>
-## Quarterly Results {.tabset .tabset-fade .tabset-pills}
-
-### By Product
-
-(tab content)
-
-### By Region
-
-(tab content)
-
+  <h1>Hello, World!</h1>
+  <p>This is my HTML document written inside a GitHub README.</p>
 </body>
 </html>
